Adding bootstrap support.

--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Welcome</title>
-    </head>
-    <body>
-        <h2>Hello World</h2>
-        <p>
-           The time is now: <%= Time.now %>
-        </p>
-    </body>
-</html>
+<div class="well">
+  <h2>Hello World</h2>
+  <p>
+    The time is now: <%= Time.now %>
+  </p>
+</div>
