Adding belongs_to to Course model.

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,7 +8,7 @@
     <!-- Table -->
     <table class="table">
       <tr>
-        <td class="col-xs-1">Instructor</td><td class="col-xs-5"><%= Instructor.find(c.instructor_id).name %></td>
+        <td class="col-xs-1">Instructor</td><td class="col-xs-5"><%= c.instructor.name %></td>
       </tr>
 
       <tr>
