--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,7 +1,8 @@
 <div class="well">
   <%= bootstrap_form_tag url: courses_path, method: 'get' do |f|%>
-    <% label = 'Filter'; label += " - #{params[:like]}" if params[:like] %>
+    <% label = 'Filter'; label += " - #{params[:like]}" if params[:like] && !params[:like].empty? %>
     <%= f.text_field 'like', label: label, placeholder: 'Filter by course number, title, instructor, description' %>
+    <%= f.check_box 'status', label: 'Active', :checked => params[:status] ? to_bool(params[:status]) : true %>
     <%= f.submit 'Filter' %>
     <%= link_to 'Clear Filter', courses_path, class: 'btn btn-default' %>
   <% end %>
@@ -26,6 +27,10 @@
 
       <tr>
         <td class="col-xs-1">End Date</td><td class="col-xs-5"><%= c.end_date %></td>
+      </tr>
+
+      <tr>
+        <td class="col-xs-1">Status</td><td class="col-xs-5"><%= c.status ? 'Active' : 'Inactive' %></td>
       </tr>
 
       <tr>
