--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -8,35 +8,7 @@
   <% end %>
 </div>
 
-<% @courses.each do |c|  %>
-  <div class="panel panel-default">
-    <!-- Default panel heading -->
-    <div class="panel-heading">
-      <%= link_to c.coursenumber + ' - ' + c.title, course_path(c) %>
-    </div>
-
-    <!-- Table -->
-    <table class="table">
-      <tr>
-        <td class="col-xs-1">Instructor</td><td class="col-xs-5"><%= c.instructor.name %></td>
-      </tr>
-
-      <tr>
-        <td class="col-xs-1">Start Date</td><td class="col-xs-5"><%= c.start_date %></td>
-      </tr>
-
-      <tr>
-        <td class="col-xs-1">End Date</td><td class="col-xs-5"><%= c.end_date %></td>
-      </tr>
-
-      <tr>
-        <td class="col-xs-1">Status</td><td class="col-xs-5"><%= c.status ? 'Active' : 'Inactive' %></td>
-      </tr>
-
-      <tr>
-        <td class="col-xs-1">Description</td><td class="col-xs-5"><%= c.description %></td>
-      </tr>
-    </table>
-  </div>
+<% @courses.each do |c| %>
+  <%= render 'courses/course', course: c %>
 <% end %>
 
