--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,10 +1,17 @@
 <div class="well">
-  <% if @request && @request.is_fulfilled %>
-    Memeber of class
+  <% if @history && @history.is_current %>
+    <%= link_to 'Drop Course', destroy_history_path, method: 'delete' %>
+  <% elsif @history %>
+    Course is not active or has been dropped
   <% elsif @request %>
-    Request pending
+    Enrollment Request pending
   <% else %>
     <%= link_to 'Request Enrollment', enrollment_path(@course.id, @auth_user.id), method: 'post' %>
   <% end %>
 </div>
+<% if @grade %>
+  <div class="well">
+    Student Grade: <%= @grade.gradeletter %>
+  </div>
+<% end %>
 <%= render 'courses/course', course: @course %>
