Allowing users to change their password.

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,4 +2,5 @@
   <%= f.text_field :name %>
   <%= f.email_field :email %>
   <%= f.submit 'Update' %>
+  <%= link_to 'Change Password', password_user_path, class: 'btn btn-default' %>
 <% end %>
