--- a/app/views/authentication/new.html.erb
+++ b/app/views/authentication/new.html.erb
@@ -2,5 +2,5 @@
   <%= f.email_field :email %>
   <%= f.password_field :password %>
   <%= f.submit "Log In" %>
-  <%= link_to 'Create Account', create_student_path, :class => 'btn btn-default' %>
+  <%= link_to 'Create Account', new_student_path, :class => 'btn btn-default' %>
 <% end %>
