Beginning Messages implementation.

--- a/app/views/layouts/_instructors_links.html.erb
+++ b/app/views/layouts/_instructors_links.html.erb
@@ -3,4 +3,5 @@
   <li><%= link_to 'Remove Students', history_path %></li>
   <li><%= link_to 'Add Material', my_courses_path %></li>
   <li><%= link_to 'Post Grades', grade_index_path %></li>
+  <li><%= link_to 'View Messages', messages_path %></li>
 </ul>
