--- a/app/views/layouts/_students_links.html.erb
+++ b/app/views/layouts/_students_links.html.erb
@@ -1,4 +1,5 @@
 <ul class="nav navbar-nav">
   <li><%= link_to 'View My Courses', my_courses_path %></li>
   <li><%= link_to 'View All Courses', courses_path %></li>
+  <li><%= link_to 'View Messages', messages_path %></li>
 </ul>
