Allowing for creation of message posts.

--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -4,3 +4,4 @@
 <% @posts.each do |p| %>
   <%= render 'messages/post', post: p %>
 <% end %>
+<%= link_to 'Reply', new_message_post_path(@message), class: 'btn btn-default' %>
