Implementing message creation. Students can now message instructors.

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div class="panel panel-default">
   <div class="panel-heading">
     <%
-      link_text = 'Correspondence From ' +
+      link_text = 'Correspondence With ' +
           (@auth_user == message.instructor ? message.student.name : message.instructor.name)
     %>
     <%= link_to link_text, message_path(message) %>
