--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -9,6 +9,11 @@
     <%= link_to 'Request Enrollment', enrollment_course_student_path(@course.id, @auth_user.id), method: 'post' %>
   <% end %>
 </div>
+<div class="well">
+  <% if @history && @history.is_current %>
+    <%= link_to 'Send message to instructor', new_user_message_path(@course.instructor) %>
+  <% end %>
+</div>
 <% if @grade %>
   <div class="well">
     Student Grade: <%= @grade.gradeletter %>
