Added Instructor- Add Course Functionality

--- a/app/views/layouts/_instructors_links.html.erb
+++ b/app/views/layouts/_instructors_links.html.erb
@@ -1,6 +1,6 @@
 <ul class="nav navbar-nav">
   <li><%= link_to 'Approve Requests', enrollment_path %></li>
   <li><%= link_to 'Remove Students', history_path %></li>
-  <li><%= link_to 'Add Material', my_courses_path %></li>
+  <li><%= link_to 'Add Material', course_material_index_path %></li>
   <li><%= link_to 'Post Grades', grade_index_path %></li>
 </ul>
