Added functionality for managing admins

--- a/app/views/admins/new.html.erb
+++ b/app/views/admins/new.html.erb
@@ -6,7 +6,7 @@
 
     <%= f.email_field :email, :placeholder => 'User Email' %>
 
-    <%= f.password_field :password_digest, :placeholder => 'Password' %>
+    <%= f.password_field :password, :placeholder => 'Password' %>
 
     <%= f.password_field :confirm_password, :placeholder => 'Confirm Password' %>
 
