Added the functionality that you(Admin) cannot delete yourself or the default admin.

--- a/app/views/admins/delete.html.erb
+++ b/app/views/admins/delete.html.erb
@@ -4,11 +4,16 @@
   <h2>Delete Admin</h2>
 
   <%= form_for(:subject, :url => {:action => 'destroy', :id => @admin.id}) do|f| %>
+      <% if @admin.email == 'admin@portal.net' || @admin.id == session[:user_id]%>
+          <div class="one"><p>You cannot delete this admin.</p></div>
+      <% else %>
+          <div class="one"><p>Are you sure you want to delete this admin?</p></div>
+          <div class="form-buttons">
+            <%= submit_tag("Delete") %>
+          </div>
+      <% end %>
 
-  <p>Are you sure you want to permanently delete this admin</p>
 
-      <div class="form-buttons">
-        <%= submit_tag("Delete") %>
-      </div>
+
       <%end%>
 </div>
