--- a/app/views/users/edit_password.html.erb
+++ b/app/views/users/edit_password.html.erb
@@ -1,5 +1,5 @@
 <%= bootstrap_form_for :password, method: 'put' do |f| %>
-  <%= f.password_field :password_digest %>
+  <%= f.password_field :password %>
   <%= f.password_field :confirm_password %>
   <%= f.submit 'Update Password' %>
 <% end %>
