Adding admins links.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,13 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <% if @auth_user %>
-
-            <% if @auth_user.type == 'Instructor' %>
-              <%= render 'layouts/instructors_links' %>
-            <% end %>
             <!-- Render navigation links based on users type -->
             <% if @auth_user.type == 'Student' %>
               <%= render 'layouts/students_links' %>
+            <% elsif @auth_user.type == 'Instructor' %>
+              <%= render 'layouts/instructors_links' %>
+            <% elsif @auth_user.type == 'Admin' %>
+              <%= render 'layouts/admins_links' %>
             <% end %>
 
             <ul class="nav navbar-nav navbar-right">
