--- a/app/views/admins/delete.html.erb
+++ b/app/views/admins/delete.html.erb
@@ -4,7 +4,7 @@
   <h2>Delete Admin</h2>
 
   <%= form_for(:subject, :url => {:action => 'destroy', :id => @admin.id}) do|f| %>
-      <% if @admin.email == 'admin@portal.net' || @admin.id == session[:user_id]%>
+      <% if @admin.deletable || @admin.id == session[:user_id]%>
           <div class="one"><p>You cannot delete this admin.</p></div>
       <% else %>
           <div class="one"><p>Are you sure you want to delete this admin?</p></div>
