--- a/app/views/admins/delete.html.erb
+++ b/app/views/admins/delete.html.erb
@@ -3,17 +3,12 @@
 <div class="admins delete">
   <h2>Delete Admin</h2>
 
-  <%= form_for(:subject, :url => {:action => 'destroy', :id => @admin.id}) do|f| %>
-      <% if @admin.deletable || @admin.id == session[:user_id]%>
+      <% if !@admin.deletable || @admin.id == session[:user_id]%>
           <div class="one"><p>You cannot delete this admin.</p></div>
       <% else %>
           <div class="one"><p>Are you sure you want to delete this admin?</p></div>
           <div class="form-buttons">
-            <%= submit_tag("Delete") %>
+            <%= link_to 'Delete', admin_path, method: 'delete', class: 'btn btn-default' %>
           </div>
       <% end %>
-
-
-
-      <%end%>
 </div>
