--- a/app/views/admins/index_users.html.erb
+++ b/app/views/admins/index_users.html.erb
@@ -33,6 +33,8 @@
           <th>&nbsp;</th>
           <th>&nbsp;</th>
           <td class="actions">
+            <%= link_to 'Show',  %>
+            <%= link_to 'Delete',  %>
             <%= link_to("Show", {:action => 'show_users', :id => user.id}, :class => 'action show_users') %>
             <%= link_to("Delete", {:action => 'delete_user', :id => user.id}, :class => 'action delete_user') %>
           </td>
