--- a/app/views/layouts/_admins_links.html.erb
+++ b/app/views/layouts/_admins_links.html.erb
@@ -1,4 +1,4 @@
 <ul class="nav navbar-nav">
   <li><%= link_to 'Admins', admins_path %></li>
-  <li><%= link_to 'All Users', users_admins_path %></li>
+  <li><%= link_to 'All Users', users_path %></li>
 </ul>
