--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -33,10 +33,8 @@
           <th>&nbsp;</th>
           <th>&nbsp;</th>
           <td class="actions">
-            <%= link_to 'Show',  %>
-            <%= link_to 'Delete',  %>
-            <%= link_to("Show", {:action => 'show_users', :id => user.id}, :class => 'action show_users') %>
-            <%= link_to("Delete", {:action => 'delete_user', :id => user.id}, :class => 'action delete_user') %>
+            <%= link_to 'Show', user_path(user) %>
+            <%= link_to 'Delete', delete_user_path(user) %>
           </td>
         </tr>
     <% end %>
