Added new courses

--- a/app/views/courses/index_admin.html.erb
+++ b/app/views/courses/index_admin.html.erb
@@ -1,6 +1,6 @@
 <div class="courses index">
   <h2>Admins - Course Index</h2>
-  <%= link_to("Add new Course", {:action => 'new_course'}, :class => 'action new_course') %>
+  <%= link_to("Add new Course", {:action => 'new'}, :class => 'action new_course') %>
   <table class="listing" summary="Course list">
     <tr class="header">
       <th>Course Number</th>
