--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,8 @@
 <div class="well">
+  <% if (@auth_user.type == 'Admin') %>
+    <%= link_to("Add new Course", {:action => 'new'}, :class => 'action new') %>
+  <% end %>
+
   <%= bootstrap_form_tag url: courses_path, method: 'get' do |f|%>
     <% label = 'Filter'; label += " - #{params[:like]}" if params[:like] && !params[:like].empty? %>
     <%= f.text_field 'like', label: label, placeholder: 'Filter by course number, title, instructor, description' %>
