Bootsrapping admin html files.

--- a/app/views/admins/delete.html.erb
+++ b/app/views/admins/delete.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to '<< Back to List', admins_path %>
 
 <div class="admins delete">
   <h2>Delete Admin</h2>
