--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -1,35 +1,27 @@
 <div class="admins index">
-  <h2>Admins</h2>
-  <%= link_to("Add new Admin", {:action => 'new'}, :class => 'action new') %>
-  <table class="listing" summary="Admin list">
-    <tr class="header">
-      <th>ID</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
-      <th>Name</th>
-      <th>&nbsp;</th>
-      <th>Email</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
-      <th>Actions</th>
-    </tr>
-    <% @admins.each do |admin| %>
-        <tr>
-          <td><%= admin.id %></td>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
-          <td><%= admin.name %></td>
-          <th>&nbsp;</th>
-          <td><%= admin.email %></td>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
-          <td class="actions">
-            <%= link_to 'Show', admin_path(admin) %>
-            <%= link_to 'Delete', delete_admin_path(admin) %>
-          </td>
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      Admins
+    </div>
+    <div class="panel-body">
+      <%= link_to 'Add new Admin', new_admin_path %>
+      <table class="listing table" summary="Admin list">
+        <tr class="header">
+          <th>ID</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th colspan="2">Actions</th>
         </tr>
-    <% end %>
-  </table>
+        <% @admins.each do |admin| %>
+            <tr>
+              <td><%= admin.id %></td>
+              <td><%= admin.name %></td>
+              <td><%= admin.email %></td>
+              <td><%= link_to 'Show', admin_path(admin) %></td>
+              <td><%= link_to 'Delete', delete_admin_path(admin) %></td>
+            </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
 </div>
