--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -1,4 +1,5 @@
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to '<< Back to List', courses_path %>
+
 <%= bootstrap_form_tag url: courses_path, method: 'post' do |f| %>
     <%= f.text_field :coursenumber, :placeholder => 'Course Number' %>
 
