--- a/app/views/users/delete.html.erb
+++ b/app/views/users/delete.html.erb
@@ -1,4 +1,4 @@
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to '<< Back to List', users_path %>
 
 <div class="users delete">
   <h2>Delete User</h2>
