--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,41 +1,23 @@
-<div class="users index">
-  <h2>Users</h2>
-  <table class="listing" summary="User list">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Users
+  </div>
+  <table class="table" summary="User list">
     <tr class="header">
       <th>ID</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
       <th>Name</th>
-      <th>&nbsp;</th>
       <th>Email</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
       <th>Type</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
-      <th>&nbsp;</th>
-      <th>Actions</th>
+      <th colspan="2">Actions</th>
     </tr>
     <% @users.each do |user| %>
         <tr>
           <td><%= user.id %></td>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
           <td><%= user.name %></td>
-          <th>&nbsp;</th>
           <td><%= user.email %></td>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
           <td><%= user.type %></td>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
-          <th>&nbsp;</th>
-          <td class="actions">
-            <%= link_to 'Show', user_path(user) %>
-            <%= link_to 'Delete', delete_user_path(user) %>
-          </td>
+          <td><%= link_to 'Show Courses', user_path(user) %></td>
+          <td><%= link_to 'Delete User', delete_user_path(user) %></td>
         </tr>
     <% end %>
   </table>
