--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
-<%= link_to("<< Back to List", {:action => 'index'}, :class => 'back-link') %>
+<%= link_to '<< Back to List', users_path %>
 
 <div class="well">
-  <h3>Current</h3>
+  <h3>Current </h3>
 </div>
 <% @current.each do |c| %>
     <%= render 'courses/course', course: c %>
