--- a/app/views/courses/inactivate.html.erb
+++ b/app/views/courses/inactivate.html.erb
@@ -1,6 +1,6 @@
 <h4 style="text-align: center">In-activate Courses</h4>
 <div class="well">
-  <%= bootstrap_form_tag url:course_inactive_path ,method: 'get' do |f|%>
+  <%= bootstrap_form_tag url: inactivate_courses_path, method: 'get' do |f|%>
       <%= f.select 'id',options_from_collection_for_select(@courses, :id, :title, params[:id]), {:prompt => "Select Course"}%>
       <%= f.submit 'Inactivate Course', class: 'btn btn-danger' %>
   <% end %>
