--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -31,6 +31,9 @@
       <td class="col-xs-1">
         <%= link_to("Delete Course", delete_course_path(course), :class => 'btn btn-default') %>
       </td>
+      <td class="col-xs-1">
+        <%= link_to("Edit Course", edit_course_path(course), :class => 'btn btn-default') %>
+      </td>
     </tr>
     <% end %>
   </table>
