--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -1,17 +1,17 @@
 <%= link_to '<< Back to List', courses_path %>
 
-<%= bootstrap_form_tag url: courses_path, method: 'put' do |f| %>
-    <%= f.text_field :coursenumber, :placeholder => 'Course Number' %>
+<%= bootstrap_form_tag url: course_path(@course), method: 'put' do |f| %>
+    <%= f.text_field :coursenumber, value: @course.coursenumber, :placeholder => 'Course Number' %>
 
-    <%= f.text_field :title, :placeholder => 'Title' %>
+    <%= f.text_field :title, value: @course.title, :placeholder => 'Title' %>
 
-    <%= f.text_area :description, :placeholder => 'Description' %>
+    <%= f.text_area :description, value: @course.description, :placeholder => 'Description' %>
 
-    <%= f.date_field :start_date, :placeholder => 'Start Date' %>
+    <%= f.date_field :start_date, value: @course.start_date, :placeholder => 'Start Date' %>
 
-    <%= f.date_field :end_date, :placeholder => 'End Date' %>
+    <%= f.date_field :end_date, value: @course.end_date, :placeholder => 'End Date' %>
 
-    <%= f.text_field :email, :placeholder => 'Instructor Email' %>
+    <%= f.text_field :email, value: @course.instructor.email ,:placeholder => 'Instructor Email' %>
 
     <%= f.submit 'Save' %>
 <% end %>
