--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -35,10 +35,13 @@
         <%= link_to("Edit Course", edit_course_path(course), :class => 'btn btn-default') %>
       </td>
       <td class="col-xs-1">
-        <%= link_to("Post Grades", grade_index_path(course), :class => 'btn btn-default') %>
+        <%= link_to("Post Grades", new_grade_path(course), :class => 'btn btn-default') %>
       </td>
       <td class="col-xs-1">
-        <%= link_to("Add/Remove Students", enrollment_path(course), :class => 'btn btn-default') %>
+        <%= link_to("Add Students", enrollment_path(course), :class => 'btn btn-default') %>
+      </td>
+      <td class="col-xs-1">
+        <%= link_to("Remove Students", history_path(course), :class => 'btn btn-default') %>
       </td>
       <td class="col-xs-1">
         <%= link_to("Add/Edit Course Material", course_material_index_path(course), :class => 'btn btn-default') %>
