--- a/app/views/history/index.html.erb
+++ b/app/views/history/index.html.erb
@@ -22,7 +22,7 @@
             <td><%= u.name %></td>
             <td><%= u.email %></td>
             <td>
-              <%= bootstrap_form_tag url:history_path(:id => @history_record, :courseid => params[:id]) ,method: 'delete' do |f|%>
+              <%= bootstrap_form_tag url:history_path(:id => @history_record.ids[0], :courseid => params[:id]) ,method: 'delete' do |f|%>
                 <%= f.submit 'Remove', class: 'btn btn-danger' %>
               <% end %>
             </td>
