Fixing history links.

--- a/app/views/courses/_course.html.erb
+++ b/app/views/courses/_course.html.erb
@@ -48,7 +48,7 @@
         <%= link_to("Remove Students", history_path(:id => course), :class => 'btn btn-default') %>
 
 
-        <%= link_to("Add/Edit Course Material", course_material_index_path(course), :class => 'btn btn-default') %>
+        <%= link_to("Add/Edit Course Material", course_material_index_path(id: course), :class => 'btn btn-default') %>
       </td>
     </tr>
 
