--- a/app/views/courses/new.html.erb
+++ b/app/views/courses/new.html.erb
@@ -7,9 +7,9 @@
 
     <%= f.text_area :description, :placeholder => 'Description' %>
 
-    <%= f.date_field :start_date, :placeholder => 'Start Date' %>
+    <%= f.date_field :start_date, :placeholder => 'Start Date: mm-dd-yyyy' %>
 
-    <%= f.date_field :end_date, :placeholder => 'End Date' %>
+    <%= f.date_field :end_date, :placeholder => 'End Date: mm-dd-yyyy' %>
 
     <%= f.text_field :email, :placeholder => 'Instructor Email' %>
 
