Making 'Add' buttons more obvious.

--- a/app/views/admins/index.html.erb
+++ b/app/views/admins/index.html.erb
@@ -2,9 +2,9 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       Admins
+      <%= link_to 'Add new Admin', new_admin_path, class: 'btn btn-success' %>
     </div>
     <div class="panel-body">
-      <%= link_to 'Add new Admin', new_admin_path %>
       <table class="listing table" summary="Admin list">
         <tr class="header">
           <th>ID</th>
