--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,14 +1,13 @@
 <div class="well">
-  <% if (@auth_user.type == 'Admin') %>
-    <%= link_to("Add new Course", {:action => 'new'}, :class => 'action new') %>
-  <% end %>
-
   <%= bootstrap_form_tag url: courses_path, method: 'get' do |f|%>
     <% label = 'Filter'; label += " - #{params[:like]}" if params[:like] && !params[:like].empty? %>
     <%= f.text_field 'like', label: label, placeholder: 'Filter by course number, title, instructor, description' %>
     <%= f.check_box 'status', label: 'Active', :checked => params[:status] ? to_bool(params[:status]) : true %>
     <%= f.submit 'Filter' %>
     <%= link_to 'Clear Filter', courses_path, class: 'btn btn-default' %>
+    <% if (@auth_user.type == 'Admin') %>
+        <%= link_to("Add new Course", {:action => 'new'}, :class => 'btn btn-success') %>
+    <% end %>
   <% end %>
 </div>
 
