--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,9 +8,9 @@
 
   <div class="panel-heading">
     Users
+    <%= link_to 'Add a new user', new_user_path, class: 'btn btn-success' %>
   </div>
   <div class="panel-body">
-    <%= link_to 'Add a new user', new_user_path %>
     <table class="table" summary="User list">
       <tr class="header">
         <th>ID</th>
